--- a/config/west.yml
+++ b/config/west.yml
@@ -3,7 +3,7 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     - name: badjeff
-+     url-base: https://github.com/badjeff
+      url-base: https://github.com/badjeff
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
@@ -11,8 +11,8 @@ manifest:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-+   - name: zmk-behavior-key-press-lip
-+     remote: badjeff
-+     revision: main
+    - name: zmk-behavior-key-press-lip
+      remote: badjeff
+      revision: main
   self:
     path: config
